--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python>=3.10
+python=3.11
 Django==5.0.4
-numpy==1.21.5
-pymongo==4.5.0
+numpy==1.26.4
+pymongo==4.7.1
 Requests==2.31.0
 streamlit==1.33.0
 tensorflow==2.16.1
